Fixed rock visibility bug.

--- a/public/fl/monitor.styl
+++ b/public/fl/monitor.styl
@@ -48,7 +48,7 @@
 			background-color #77BB44
 
 			&.fl-rock
-				background-color #7F3300
+				background-color #7F3300!important
 
 			& > .fl-resource
 				display block
